<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2009 - 2015 Carmen Alvarez

    This file is part of Nounours for Android.

    Nounours for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Nounours for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Nounours for Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
	<string name="random">Random</string>
	<string name="actions">Actions</string>
	<string name="about">About</string>
	<string name="themes">Theme</string>
	<string name="backgroundColor">Background color</string>
	<string name="abouttext"><![CDATA[
<h1>%1$s version %2$s</h1>
By Carmen Alvarez (<a href="mailto:c@rmen.ca">c@rmen.ca</a>)<br>
Source code on <a href="https://github.com/caarmen/nounours-android">Github</a><br><br>
<b>Credits:</b><br><br>
Sergey Margaritov: <a href="https://github.com/attenzione/android-ColorPickerPreference">android-ColorPickerPreference</a><br><br>
B-Roll (Macarenours music): <a href="http://incompetech.com">Kevin MacLeod</a><br><br>
<a href="https://github.com/nbadal/android-gif-encoder">Nick Badal</a> and <a href="http://www.jappit.com/blog/2008/12/04/j2me-animated-gif-encoder/">Alessandro La Rosa</a>, for the animated gif encoder.<br><br>
The Android(TM) Robot is created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.]]></string>
	<string name="help">Help</string>
	<string name="fullscreen">Full screen</string>
	<string name="fullscreen_hint">Tap the four corners to exit full-screen mode.</string>
	<string name="wallpaper">Set your wallpaper</string>
	<string name="daydream">Daydream settings</string>
	<string name="dimTitle">Dimmed image</string>
	<string name="dimSummary">This makes the icons more readable</string>
	<string name="grayscaleTitle">Black and white</string>
	<string name="enablesound">Turn sound/vibrate on</string>
	<string name="toast_remindMenuButton">Press the MENU button for more options\u2026</string>
	<string name="options">Options</string>
	<string name="idleTimeout">Time before I fall asleep</string>
	<string name="record_start">Start recording</string>
	<string name="record_stop">Stop recording</string>
	<string name="notif_save_animation_in_progress_title">Saving the animation&#8230;</string>
	<string name="notif_save_animation_in_progress_content">Saving the Nounours animation&#8230;</string>
	<string name="notif_save_animation_done">Animation saved</string>
	<string name="notif_save_animation_failed">Couldn\'t save the animation</string>
	<string name="share">Share</string>
	<string name="share_app_chooser_title">Share via</string>

</resources>
