<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2016 Carmen Alvarez

    This file is part of Nounours for Android.

    Nounours for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Nounours for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Nounours for Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:icon="@drawable/ic_menu_gallery"
        android:key="dream_Theme"
        android:title="@string/themes"
        android:defaultValue="@string/DEFAULT_THEME_ID"
        android:entries="@array/themesList"
        android:entryValues="@array/themeListValues"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!--suppress AndroidElementNotAllowed -->
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="@android:color/black"
        android:icon="@drawable/ic_pref_background_color"
        android:key="dream_BackgroundColor"
        android:title="@string/backgroundColor" />

    <CheckBoxPreference
        android:icon="@drawable/ic_pref_dim"
        android:key="dream_nounourslwp_dim"
        android:title="@string/dimTitle"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:icon="@drawable/ic_pref_grayscale"
        android:key="dream_grayscale"
        android:title="@string/grayscaleTitle"
        android:defaultValue="false" />

    <ListPreference
        android:icon="@drawable/ic_pref_idle_timeout"
        android:key="dream_IdleTimeout2"
        android:title="@string/idleTimeout"
        android:defaultValue="30000"
        android:entries="@array/idleTimeout"
        android:entryValues="@array/idleTimeoutValues"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <Preference
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/about">
        <intent
            android:targetPackage="@string/APPLICATION_ID"
            android:targetClass="ca.rmen.nounours.android.handheld.AboutActivity" />
    </Preference>

</PreferenceScreen>
