<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2009 - 2015 Carmen Alvarez

    This file is part of Nounours for Android.

    Nounours for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Nounours for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Nounours for Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:icon="@drawable/ic_menu_gallery"
        android:key="app_Theme"
        android:title="@string/themes"
        android:defaultValue="@string/DEFAULT_THEME_ID"
        android:entries="@array/themesList"
        android:entryValues="@array/themeListValues"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:icon="@drawable/ic_pref_sound"
        android:key="app_SoundAndVibrate"
        android:title="@string/enablesound"
        android:defaultValue="@bool/sound_enabled_default" />

    <ListPreference
        android:icon="@drawable/ic_pref_idle_timeout"
        android:key="app_IdleTimeout2"
        android:title="@string/idleTimeout"
        android:defaultValue="30000"
        android:entries="@array/idleTimeout"
        android:entryValues="@array/idleTimeoutValues"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <Preference
        android:key="launch_wallpaper_settings"
        android:icon="@drawable/ic_pref_wallpaper"
        android:title="@string/wallpaper">
        <intent android:action="android.service.wallpaper.LIVE_WALLPAPER_CHOOSER" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/about">
        <intent
            android:targetPackage="@string/APPLICATION_ID"
            android:targetClass="ca.rmen.nounours.AboutActivity" />
    </Preference>

</PreferenceScreen>
